# apps/web/src/api/openapi.json
@@ -278,6 +278,11 @@
             "title": "Capability Id",
             "type": "string"
           },
+          "connection_version_id": {
+            "format": "uuid",
+            "title": "Connection Version Id",
+            "type": "string"
+          },
           "created_at": {
             "format": "date-time",
             "title": "Created At",
@@ -336,6 +341,7 @@
         "required": [
           "id",
           "capability_id",
+          "connection_version_id",
           "sequence",
           "display_name",
           "description",
